<resources>
    <string name="app_name">Tu Delivery</string>

    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Ingrese</string>
    <string name="action_reg_in_short">Registrarse</string>
    <string name="listado_tittle">Listado de productos</string>

    <!-- Strings related to perfil del usuario  -->
    <string name="userName">Nombre de Usuario</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_email">Email</string>
    <string name="password">Contraseña</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastN">Apellido</string>
    <string name="nombreYApellido">Nombre y Apellido:</string>
    <string name="prompt_password">Password</string>
    <string name="mostrarFecha">Fecha</string>
    <string name="prompt_fechaNac">Fecha de Nacimiento</string>

    <!--    Mensajes de validación  -->
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_user">El nombre de usuario no debe tener más de 10 caracteres</string>
    <string name="error_invalid_name">El nombre no puede ser tan corto</string>
    <string name="error_invalid_lastname">El apellido no puede ser tan corto</string>
    <string name="error_invalid_fecha">La fecha debe ser anterior al día actual</string>
    <string name="error_invalid_password">La contraseña es demasiado corta. Mínimo 6 caracteres alfanumericos</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es obligatorio</string>
    <string name="action_sign_out">Cerrar Sesion</string>
    <string name="selectFood">Seleccionar Comida</string>
    <string name="comida">Comida</string>
    <string name="bebida">Bebida</string>
    <string name="select_dessert">Seleccionar Postre</string>
    <string name="select_drink">Seleccionar Bebida</string>
    <string name="postre">Postre</string>
    <string name="selecciona_una_opcion">seleccionar una opcion</string>
    <string name="action_procesar">Realizar pedido</string>
    <string name="title_activity_confirmation">Confirmación</string>
    <string name="text_direccion">Dirección</string>
    <string name="text_criterio">Criterio de selección</string>
    <string name="action_enviar">Enviar Pedido</string>
    <string name="text_eta">ETA</string>
    <string name="text_precio">Precio</string>
</resources>
