<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10sp">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/prompt_user"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/etPasw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etUser"
            android:layout_below="@+id/etUser"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etPasw"
            android:layout_below="@+id/etPasw"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etApe"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etName"
            android:layout_below="@+id/etName"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/prompt_lastN"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etApe"
            android:layout_below="@+id/etApe"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="registrar"
            android:text="@string/action_reg_in_short" />
    </RelativeLayout>

</RelativeLayout>



