<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="utn.com.ar.delivery_ui_mobile.SelectionActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btSelectFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="selectFood"
                android:text="@string/selectFood" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/etFood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1.61"
                        android:hint="@string/comida"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btSelectDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="selectDrink"
                android:text="@string/select_drink" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/etBebida"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1.61"
                        android:hint="@string/bebida"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btSelectDessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="selectDessert"
                android:text="@string/select_dessert" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/etPostre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1.61"
                    android:hint="@string/postre"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.61"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvDireccion"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/text_direccion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <EditText
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1.61"
                    android:hint="@string/text_direccion"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvCriterio"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/text_criterio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_ETA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ETA" />

                    <RadioButton
                        android:id="@+id/radio_precio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Precio" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btProcesarPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="procesarPedido"
                android:text="@string/action_procesar"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
